# perfectpick

./: .gitignore  README.md  eslint.config.mjs  ipv4.txt  ipv6.txt  output.html  package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: install-filing-queue-task.ps1  run-filing-queue.ps1
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/admin/: page.tsx
src/app/learn/: page.tsx
src/app/watchlist/: page.tsx
src/components/: scheduler-controls.tsx  search-panel.tsx  section-card.tsx  sparkline.tsx  stock-tab-nav.tsx  watchlist-toggle.tsx
src/lib/: ai.ts  contracts.ts  demo-data.ts  eod-market.ts  format.ts  fundamentals.ts  on-demand-ingestion.ts  repositories.ts  security-master.ts  supabase.ts
supabase/: setup.sql
workers/: README.md  pyproject.toml
workers/examples/: annual_report_extract_template.json  annual_report_ocr_output.json  annual_report_ocr_sample.txt  filing_extract_template.json  filing_parse_manifest.json  investor_presentation_extract_template.json  investor_presentation_ocr_output.json  investor_presentation_ocr_sample.txt  mca_xbrl_extract_template.json  mca_xbrl_output.json
workers/stock_platform/: __init__.py  cli.py  models.py
workers/stock_platform/analytics/: __init__.py  strategies.py
workers/stock_platform/ingestion/: __init__.py  document_queue.py  eod_market_data.py  filing_extraction.py  fundamentals_data.py  parser_orchestrator.py  queue_runner.py  security_master.py  source_extractors.py
workers/stock_platform/ingestion/adapters/: __init__.py  base.py  official.py
(+15 files in other folders)
